document to a set of PNG images first.  One can also search for a
regular expression in the document.  The commentary of the file explains
its usage.

** A new game called `bubbles' has been added.

** minibuffer-indicate-depth-mode shows the minibuffer depth in the prompt.


* Changes in Specialized Modes and Packages in Emacs 23.1

** archive-mode has basic support to browse Rar archives.
** talk.el has been extended for multiple tty support.

** compilation-auto-jump-to-first-error tells `compile' to jump to
the first error encountered during compilations.

** In the `copyright' package, you can specify your copyright holders's names.
Only copyright lines with holders matching copyright-names-regexp will be
considered for update.

** eldoc highlights the function argument under point
with the face `eldoc-highlight-function-argument'.

** VC
*** Clicking on the VC mode-line entry now pops the VC menu.

*** The VC mode-line entry now has a tooltip that explains the VC file status.

*** VC now supports applying VC operations to a set of files at a time.

** sgml-electric-tag-pair-mode lets you simultaneously edit matched tag pairs.

** The appearance of superscript and subscript in TeX is more customizable.
See the documentation of the variables: tex-fontify-script,
tex-font-script-display, tex-suscript-height-ratio, and
tex-suscript-height-minimum.

** BibTeX mode:

*** New `bibtex-entry-format' options `whitespace', `braces', and
`string', disabled by default.

*** New variable `bibtex-cite-matcher-alist' contains rules to
identify cited keys in BibTeX entries, used by `bibtex-find-crossref.

*** Command `bibtex-url' now allows multiple URLs per entry.

+++
** Tramp

*** New connection methods.
The new methods "plinkx", "plink2", "psftp", "sftp" and "fish" have
been introduced.  There are also new so-called gateway methods
"tunnel" and "socks".

*** Multihop syntax has been removed.
The pseudo-method "multi" has been removed.  Instead of, multi hops