@@ -152,6 +152,7 @@ its usage.
 
 * Changes in Specialized Modes and Packages in Emacs 23.1
 
+** diff-fine-highlight highlights char-level details of changes in a diff hunk.
 ** archive-mode has basic support to browse Rar archives.
 ** talk.el has been extended for multiple tty support.
 
